Optimize Dockerfiles and dev compose for production and development
Production optimizations:
- Convert ai-orchestrator to multi-stage Maven build with Alpine JRE
- Add non-root user (appuser) for security
- Implement JVM memory optimization flags (G1GC, MaxRAMPercentage)
- Convert frontend to multi-stage Node.js + Alpine nginx build
- Add health checks to both services
- Implement build cache mounts for faster rebuilds

Development optimizations:
- Add profiles (full, backend, frontend) for selective startup
- Implement proper health checks with service dependencies
- Add hot reload support via volume mounts for frontend source
- Expose debug port 5005 for Java remote debugging
- Include environment variable examples (.env.example)
- Add comprehensive dev setup documentation

Additional improvements:
- Optimize layer caching with dependency files copied first
- Use Alpine base images throughout for smaller footprints
- Add PostgreSQL Alpine variant in dev compose
- Create Dockerfile.dev with polling support for Docker environments
- Include dev-aliases.sh for common commands
- Add DEV_SETUP.md with troubleshooting guide

Assisted-By: cagent